<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="INPUT_PROG" Id="{7d3e32e0-a112-4fce-b916-38fc5ef65b77}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM INPUT_PROG
VAR
	T1: TON;
	
	T2: TON;
	Q: BOOL;
	OUT1: BOOL;
	AR: R_TRIG;
	LOTBOX_STAT: BOOL;
	RTRIG_1: F_TRIG;
	RTRIG_2: F_TRIG;
	RTRIG_3: F_TRIG;
	RTRIG_4: F_TRIG;
	QUEUE_INDEX_1: INT;
	QUEUE_INDEX_2: INT;
	QUEUE_INDEX_3: INT;
	QUEUE_INDEX_4: INT;
	IC_CASE: INT;
	TMR1: TON;
	TMR2: TON;
	I_STOPPER_TRANSFER_A: INT;
	TMR3: TON;
	TMR4: TON;
	TMR5: TON;
	TMR6: TON;
	TMR7: TON;
	TMR8: TON;
	TMR9: TON;
	TMR10: TON;
	TMR11: TON;
	TMR12: TON;
	TMR14: TON;
	COUNTER_1: CTU;
	RESET_COUNTER: BOOL;
	COUNTER_2: CTU;
END_VAR

VAR PERSISTENT
	AR_TRIG: R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//INDICATOR LOTBOX
INPUT_VAR.O_LOT_BOX_INDICATOR_1:= NOT INPUT_VAR.I_LOTBOX_DETECT_1;
INPUT_VAR.O_LOT_BOX_INDICATOR_2:= NOT INPUT_VAR.I_LOTBOX_DETECT_2;
INPUT_VAR.O_LOT_BOX_INDICATOR_3:= NOT INPUT_VAR.I_LOTBOX_DETECT_3;
INPUT_VAR.O_LOT_BOX_INDICATOR_4:= NOT INPUT_VAR.I_LOTBOX_DETECT_4;

IF NOT INPUT_VAR.I_LOTBOX_DETECT_1 OR NOT INPUT_VAR.I_LOTBOX_DETECT_2 OR NOT INPUT_VAR.I_LOTBOX_DETECT_3 OR NOT INPUT_VAR.I_LOTBOX_DETECT_4 THEN
	INPUT_VAR.O_TOWER_LAMP_YELLOW :=TRUE;
END_IF 


IF FLAG_VAR.ALLOW_EXECUTE_LOAD_FUKUDA THEN 
	IF INPUT_VAR.I_CASE=100 OR INPUT_VAR.I_CASE=12 THEN
		INPUT_VAR.I_CASE:=0;
		IC_CASE:=0;	
		END_IF			
	LOAD_FUKUDA();
END_IF
IF FLAG_VAR.ALLOW_EXECUTE_RETURN_FUKUDA THEN 
	IF INPUT_VAR.I_CASE=100 THEN
		INPUT_VAR.I_CASE:=0;
		IC_CASE:=0;
	END_IF	
	RETURN_FUKUDA();	
END_IF

(*
TMR4(IN:=INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_B,PT:= T#2S);
TMR5(IN:=INPUT_VAR.I_STOPPER_TRANSFER_ON_B,PT:=T#2S);
TMR6(IN:=INPUT_G6_VAR.O_G6_SELECT_FUKUDA_B,PT:=T#10S);

INPUT_VAR.O_STOPPER_TRANSFER_B:=TMR4.Q;
INPUT_G6_VAR.O_G6_SELECT_FUKUDA_B:=TMR5.Q;
*)

//END_IF
//LOTBOX_STAT := INPUT_VAR.I_LOTBOX_DETECT_1 + INPUT_VAR.I_LOTBOX_DETECT_2 + INPUT_VAR.I_LOTBOX_DETECT_3 + INPUT_VAR.I_LOTBOX_DETECT_4 


//INPUT_G6_VAR.I_G6_HOME:=POWER_CONTROL.O_PWR_CTRL_ROBOT_G6;
//INDEXING1_VAR.I_INDEXING_HOME := POWER_CONTROL.O_PWR_CTRL_INDEXING_1;

RTRIG_1(CLK :=INPUT_VAR.I_LOTBOX_DETECT_1);
RTRIG_2(CLK :=INPUT_VAR.I_LOTBOX_DETECT_2);
RTRIG_3(CLK :=INPUT_VAR.I_LOTBOX_DETECT_3);
RTRIG_4(CLK :=INPUT_VAR.I_LOTBOX_DETECT_4);
(*
IF RTRIG_1.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=1;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=1;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=1;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=1;
	END_IF	
	INPUT_VAR.O_LOTBOX_CLAMP_ON_1:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_1:=FALSE;
ELSIF RTRIG_2.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=2;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=2;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=2;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=2;
	END_IF
	INPUT_VAR.O_LOTBOX_CLAMP_ON_2:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_2:=FALSE;
ELSIF RTRIG_3.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=3;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=3;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=3;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=3;
	END_IF	
	INPUT_VAR.O_LOTBOX_CLAMP_ON_3:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_3:=FALSE;
ELSIF RTRIG_4.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=4;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=4;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=4;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=4;
	END_IF	
	INPUT_VAR.O_LOTBOX_CLAMP_ON_4:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_4:=FALSE;	
END_IF

IF NOT INPUT_VAR.I_LOTBOX_DETECT_1 THEN
	QUEUE_INDEX_1 :=0;
END_IF
IF NOT INPUT_VAR.I_LOTBOX_DETECT_2 THEN
	QUEUE_INDEX_2 :=0;
END_IF
IF NOT INPUT_VAR.I_LOTBOX_DETECT_3 THEN
	QUEUE_INDEX_3 :=0;
END_IF
IF NOT INPUT_VAR.I_LOTBOX_DETECT_4 THEN
	QUEUE_INDEX_4 :=0;
END_IF

IF INPUT_VAR.I_LOTEND THEN
	INPUT_VAR.O_LOTBOX_CLAMP_ON_1:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_ON_2:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_ON_3:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_ON_4:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_1:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_2:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_3:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_4:=TRUE;
			
END_IF
*)	
 
(*
INPUT_VAR.O_STOPPER_TRANSFER_A:=TMR11.Q ;
INPUT_VAR.O_STOPPER_TRANSFER_B:=TMR12.Q ;

TMR14(IN:=INPUT_G6_VAR.I_G6_END_FUKUDA,PT:=T#10S);
IF NOT TMR14.Q AND INPUT_G6_VAR.I_G6_END_FUKUDA THEN
	TMR11(IN:=FALSE);
	TMR12(IN:=FALSE);
ELSE
	TMR11(IN:=INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_A,PT:=T#2S);	
	TMR12(IN:=INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_B,PT:=T#2S);

END_IF
 

 IF INPUT_G6_VAR.I_G6_END_FUKUDA AND NOT INPUT_VAR.ACTIVE_PROGRAM_CHANGE THEN
	INPUT_VAR.ACTIVE_PROGRAM:=INPUT_VAR.ACTIVE_PROGRAM+1;
	IF INPUT_VAR.ACTIVE_PROGRAM=3 THEN
		INPUT_VAR.ACTIVE_PROGRAM:=1;
	END_IF
	INPUT_VAR.ACTIVE_PROGRAM_CHANGE:=TRUE;
 END_IF

 COUNTER_1(CU:=INPUT_G6_VAR.I_G6_END_CYCLE,RESET:=INPUT_G6_VAR.O_G6_START,PV:=14);
IF COUNTER_1.CV =1 THEN
	INPUT_VAR.ACTIVE_PROGRAM_CHANGE:=FALSE;
END_IF
 
*)]]></ST>
    </Implementation>
    <LineIds Name="INPUT_PROG">
      <LineId Id="3" Count="8" />
      <LineId Id="497" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="484" Count="0" />
      <LineId Id="367" Count="12" />
      <LineId Id="13" Count="0" />
      <LineId Id="183" Count="2" />
      <LineId Id="195" Count="0" />
      <LineId Id="243" Count="0" />
      <LineId Id="186" Count="0" />
      <LineId Id="200" Count="0" />
      <LineId Id="199" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="14" Count="19" />
      <LineId Id="128" Count="1" />
      <LineId Id="34" Count="9" />
      <LineId Id="130" Count="1" />
      <LineId Id="44" Count="9" />
      <LineId Id="132" Count="1" />
      <LineId Id="54" Count="9" />
      <LineId Id="134" Count="1" />
      <LineId Id="64" Count="14" />
      <LineId Id="80" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="116" Count="2" />
      <LineId Id="123" Count="4" />
      <LineId Id="115" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="327" Count="0" />
      <LineId Id="329" Count="1" />
      <LineId Id="158" Count="0" />
      <LineId Id="380" Count="0" />
      <LineId Id="422" Count="0" />
      <LineId Id="424" Count="0" />
      <LineId Id="430" Count="0" />
      <LineId Id="426" Count="3" />
      <LineId Id="425" Count="0" />
      <LineId Id="423" Count="0" />
      <LineId Id="382" Count="0" />
      <LineId Id="389" Count="0" />
      <LineId Id="392" Count="0" />
      <LineId Id="397" Count="0" />
      <LineId Id="399" Count="2" />
      <LineId Id="398" Count="0" />
      <LineId Id="394" Count="0" />
      <LineId Id="402" Count="0" />
      <LineId Id="404" Count="0" />
      <LineId Id="408" Count="1" />
      <LineId Id="406" Count="0" />
      <LineId Id="383" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>