<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="RETURN_FUKUDA_1" Id="{6883359e-21d5-424a-b6e6-733132b757c2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM RETURN_FUKUDA_1
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE INPUT_VAR.I_CASE OF
0:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
//	FUKUDA_MOVE(STEP_DATA_1:=0,STEP_DATA_2:=0,STEP_DATA_3:=0,STEP_DATA_4:=0,STEP_DATA_5:=2);
	CASE INPUT_VAR.I_CURRENT_TRANSACTION.TRANSPORT_INDEX OF
		2 : FUKUDA_MOVE(STEP_DATA_1:=3,
				STEP_DATA_2:=0,
				STEP_DATA_3:=3,
				STEP_DATA_4:=0,//2, //2
				STEP_DATA_5:=1);

		1 : FUKUDA_MOVE(STEP_DATA_1:=3,
				STEP_DATA_2:=0,
				STEP_DATA_3:=3,
				STEP_DATA_4:=1,//2, //2
				STEP_DATA_5:=0);
	END_CASE
1:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=6,STEP_DATA_2:=1,STEP_DATA_3:=21,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=3,
				STEP_DATA_2:=0,
				STEP_DATA_3:=3,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

2:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=6,STEP_DATA_2:=1,STEP_DATA_3:=21,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=3,
				STEP_DATA_2:=0,
				STEP_DATA_3:=3,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

3:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=6,STEP_DATA_2:=2,STEP_DATA_3:=21,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.TRANSPORT_INDEX+4,
				STEP_DATA_2:=1,
				STEP_DATA_3:=21,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

4:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=6,STEP_DATA_2:=2,STEP_DATA_3:=21,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.TRANSPORT_INDEX+4,
				STEP_DATA_2:=1,
				STEP_DATA_3:=21,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

5:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=6,STEP_DATA_2:=2,STEP_DATA_3:=21,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.TRANSPORT_INDEX+4,
				STEP_DATA_2:=2,
				STEP_DATA_3:=21,
				STEP_DATA_4:=0,
				STEP_DATA_5:=);
6:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=6,STEP_DATA_2:=2,STEP_DATA_3:=21,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.TRANSPORT_INDEX+4,
				STEP_DATA_2:=2,
				STEP_DATA_3:=2,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);
	input_var.o_CARTESSIAN_GRIPPER_ON:=TRUE;
	input_var.o_CARTESSIAN_GRIPPER_Off:=FALSE;
7:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
	//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=2,STEP_DATA_3:=3,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=2,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD+4,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

8:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=4,STEP_DATA_3:=13,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=3,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD+10,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

9: 
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=3,STEP_DATA_3:=3,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=3,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD+10,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);
10: 
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=3,STEP_DATA_3:=3,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=3,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD+10,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);
11:
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=3,STEP_DATA_3:=13,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=4,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

	input_var.o_CARTESSIAN_GRIPPER_ON:=FALSE;
	input_var.o_CARTESSIAN_GRIPPER_Off:=TRUE;
12: 
	
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=4,STEP_DATA_3:=3,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=3,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);
13: 
	
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=4,STEP_DATA_3:=3,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=3,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

14: 
	
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
//	FUKUDA_MOVE(STEP_DATA_1:=1,STEP_DATA_2:=4,STEP_DATA_3:=3,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=INPUT_VAR.I_CURRENT_TRANSACTION.STATION_NUMBER_LOAD,
				STEP_DATA_2:=4,
				STEP_DATA_3:=INPUT_VAR.I_CURRENT_TRANSACTION.JIG_INDEX_LOAD,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

15:
	
	IF INPUT_VAR.ACTIVE_ID=6 THEN
		INPUT_VAR.ACTIVE_ID:=1;
	END_IF
	
//	FUKUDA_MOVE(STEP_DATA_1:=0,STEP_DATA_2:=1,STEP_DATA_3:=0,STEP_DATA_4:=0,STEP_DATA_5:=0);
	FUKUDA_MOVE(STEP_DATA_1:=0,
				STEP_DATA_2:=1,
				STEP_DATA_3:=0,
				STEP_DATA_4:=0,
				STEP_DATA_5:=0);

	END_CASE
	
]]></ST>
    </Implementation>
    <LineIds Name="RETURN_FUKUDA_1">
      <LineId Id="225" Count="10" />
      <LineId Id="487" Count="0" />
      <LineId Id="236" Count="4" />
      <LineId Id="486" Count="0" />
      <LineId Id="253" Count="10" />
      <LineId Id="485" Count="0" />
      <LineId Id="344" Count="0" />
      <LineId Id="459" Count="9" />
      <LineId Id="484" Count="0" />
      <LineId Id="424" Count="10" />
      <LineId Id="483" Count="0" />
      <LineId Id="445" Count="10" />
      <LineId Id="482" Count="0" />
      <LineId Id="381" Count="11" />
      <LineId Id="435" Count="9" />
      <LineId Id="480" Count="0" />
      <LineId Id="491" Count="0" />
      <LineId Id="355" Count="0" />
      <LineId Id="274" Count="3" />
      <LineId Id="279" Count="0" />
      <LineId Id="281" Count="4" />
      <LineId Id="479" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="19" Count="2" />
      <LineId Id="102" Count="4" />
      <LineId Id="478" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="264" Count="9" />
      <LineId Id="477" Count="0" />
      <LineId Id="492" Count="9" />
      <LineId Id="22" Count="0" />
      <LineId Id="72" Count="3" />
      <LineId Id="108" Count="4" />
      <LineId Id="476" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="458" Count="0" />
      <LineId Id="343" Count="0" />
      <LineId Id="242" Count="0" />
      <LineId Id="244" Count="8" />
      <LineId Id="400" Count="1" />
      <LineId Id="403" Count="8" />
      <LineId Id="474" Count="0" />
      <LineId Id="412" Count="1" />
      <LineId Id="415" Count="8" />
      <LineId Id="473" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="45" Count="2" />
      <LineId Id="57" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="132" Count="4" />
      <LineId Id="472" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>