<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="STR" Id="{5cbf4f33-77aa-4bef-ae9b-2b0a1fadc429}" SpecialFunc="None">
    <Declaration><![CDATA[ PROGRAM STR
VAR

	NEW: INT;
	FG: INT;
	ENABLE_TIMER: BOOL := TRUE;
	TMR1: TON;
	TMR2: TON;
	CNT1: CTU;
	RST_COUNTER: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ENABLE_TIMER:=INPUT_VAR.STRAIGHTEN_START;
IF ENABLE_TIMER THEN
	TMR1(IN:=NOT TMR2.Q,PT:=T#0.07S);
	TMR2(IN:=TMR1.Q,PT:=T#0.15S);
	IF TMR2.Q THEN
		TMR1(IN:=FALSE); 
		TMR2(IN:=FALSE);
	END_IF
	
	IF NOT  INDEXING_1_VAR.I_PRESS_STOPPER_DOWN  THEN
		INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=TRUE;
		INDEXING_1_VAR.O_PRESS_STOPPER_UP:=FALSE;
	END_IF
ELSE
		TMR1(IN:=FALSE);
		TMR2(IN:=FALSE);
END_IF
RST_COUNTER:=NOT ENABLE_TIMER;
CNT1(CU:=TMR1.Q,RESET:=RST_COUNTER,PV:=5);
IF CNT1.CV >=10 THEN
	ENABLE_TIMER:=FALSE;
	RST_COUNTER:=TRUE;
	INPUT_VAR.STRAIGHTEN_START:=FALSE;
	INDEXING_1_VAR.STRAIGHTEN_FINISH:=TRUE;
	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=FALSE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=TRUE;
END_IF

IF CNT1.CV =2 THEN
	INDEXING_1_VAR.STRAIGHTEN_FINISH:=FALSE;
END_IF

IF 	INDEXING_1_VAR.STRAIGHTEN_FINISH THEN
	IF INDEXING_1_VAR.I_PRESS_STOPPER_UP THEN
		INPUT_VAR.STRAIGHTEN_DONE :=TRUE;	
		INPUT_VAR.STRAIGHTEN_PROCESS:=FALSE;
	END_IF	
END_IF
CASE CNT1.CV OF	
//CASE INDEXING_1_VAR.INDEXING_1_CASE OF
0:	
	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=FALSE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=TRUE;
	//INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE:=FALSE;
	INDEXING_1_VAR.I_INDEXING_1_READY_FOR_STRAIGHTEN:=FALSE;
1:	
	INPUT_VAR.STRAIGHTEN_PROCESS:=TRUE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=TRUE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=FALSE;
		
2:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=TRUE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=FALSE;
	
3:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=FALSE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=TRUE;
			
4:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=FALSE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=TRUE;

5:	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=TRUE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=FALSE;
		
6:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=TRUE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=FALSE;	
7:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=FALSE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=TRUE;
			
8:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=FALSE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=TRUE;

END_CASE

IF 
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1 AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_1 AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_2	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_3	AND 
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_4	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_1	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_2	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_3	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_4 THEN
		INDEXING_1_VAR.I_ALL_GRIPPER_OPEN :=TRUE;
	END_IF

IF 
	NOT INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1 AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_1 AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_2	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_3	AND 
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_4	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_1	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_2	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_3	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_4 THEN
		INDEXING_1_VAR.I_ALL_GRIPPER_OPEN :=FALSE;
END_IF


	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_2:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_3:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_4:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1;

	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_2:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_3:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_4:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1;	
]]></ST>
    </Implementation>
    <LineIds Name="STR">
      <LineId Id="305" Count="0" />
      <LineId Id="318" Count="0" />
      <LineId Id="266" Count="0" />
      <LineId Id="268" Count="1" />
      <LineId Id="277" Count="0" />
      <LineId Id="270" Count="0" />
      <LineId Id="287" Count="4" />
      <LineId Id="271" Count="1" />
      <LineId Id="274" Count="0" />
      <LineId Id="273" Count="0" />
      <LineId Id="275" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="284" Count="1" />
      <LineId Id="388" Count="0" />
      <LineId Id="386" Count="0" />
      <LineId Id="351" Count="0" />
      <LineId Id="374" Count="1" />
      <LineId Id="347" Count="0" />
      <LineId Id="362" Count="0" />
      <LineId Id="358" Count="1" />
      <LineId Id="361" Count="0" />
      <LineId Id="363" Count="0" />
      <LineId Id="352" Count="1" />
      <LineId Id="355" Count="2" />
      <LineId Id="354" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="246" Count="4" />
      <LineId Id="201" Count="0" />
      <LineId Id="308" Count="0" />
      <LineId Id="212" Count="2" />
      <LineId Id="218" Count="0" />
      <LineId Id="314" Count="2" />
      <LineId Id="223" Count="3" />
      <LineId Id="229" Count="1" />
      <LineId Id="261" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="292" Count="12" />
      <LineId Id="202" Count="0" />
      <LineId Id="330" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="188" Count="0" />
      <LineId Id="45" Count="8" />
      <LineId Id="189" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="190" Count="1" />
      <LineId Id="55" Count="10" />
      <LineId Id="72" Count="7" />
      <LineId Id="66" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>